# AutoVectorPLXCompiler

./: CMakeLists.txt  README.md  compile.sh  install.sh
docs/: Doxyfile.in
include/: 3ac.h  asm_generator.h  assertions.h  ast.h  constants.h  lexer.h  logging.h  parse_tree.h  parser.h  past.h  symbol_table.h  utilities.h
include/codegen/: address.h  asm_file.h  asm_generator.h  descriptor_table.h  liveness_info.h  procedure.h  util.h
include/codegen2/: address_table.h  code_gen_context.h  code_generator.h  globals_table.h  liveness.h  registers.h  stack_table.h
include/optimizer/: basic_block.h  block_types.h  blocker.h  cfg.h  dominator.h  graphs.h  group.h  loop_nest.h  loop_vectorizer.h  natural_loop.h  optimizer.h  preprocessing.h  reach.h  strip_profile.h
src/: 3ac.cpp  asm_geneator.cpp  main.cpp  parse_tree.cpp  parser.cpp  past.cpp  symbol_table.cpp
src/codegen/: address.cpp  asm_file.cpp  asm_generator.cpp  descriptor_table.cpp  liveness_info.cpp  procedure.cpp
src/codegen2/: address_table.cpp  code_gen_context.cpp  code_generator.cpp  globals_table.cpp  liveness.cpp  registers.cpp  stack_table.cpp
src/optimizer/: basic_block.cpp  blocker.cpp  cfg.cpp  dominator.cpp  graphs.cpp  group.cpp  loop_nest.cpp  loop_vectorizer.cpp  natural_loop.cpp  optimizer.cpp  preprocessing.cpp  reach.cpp  strip_profile.cpp
std/: stdio.s
tables/: scanning_table.csv  token_table.csv
test/: lexer.cpp  parse_tree.cpp  parser.cpp
test/test_code/: test0.p0  test1.p0  test10.p0  test11.p0  test12.p0  test13.p0  test2.p0  test3.p0  test4.p0  test5.p0  test6.p0  test7.p0  test8.p0  test9.p0
